--- a/style.css
+++ b/style.css
@@ -116,6 +116,15 @@ header {
 display: inline;
 }
 
+.card img {
+    cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    margin: 2rem;
+}
+
 @media screen and (max-width: 1200px) {
 main {
 flex-flow: column nowrap:
